--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,7 @@
 homepage: "https://leadtrackr.io"
 documentation: "https://reflective-patio-274.notion.site/Setting-up-a-lead-source-with-GTM-26ecd18e75e180f4b80fe8e19ce26211?pvs=74"
 versions:
+  - sha: a3d1287d2b452d5d2ae7fefb2f435ca459664be7
+    changeNotes: "bugfix channel flow"
   - sha: 63c2c5f6335d9f3180285b8bb8a40313c628c6a8
     changeNotes: "Initial release"
